--- a/ConsoleApplication2/ConsoleApplication2.csproj
+++ b/ConsoleApplication2/ConsoleApplication2.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\bildLog\bildLog.csproj">
+      <Project>{a1387765-0e30-45cc-958d-0619c06ada1f}</Project>
+      <Name>bildLog</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
