--- a/CLog/CLog.csproj
+++ b/CLog/CLog.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A1387765-0E30-45CC-958D-0619C06ADA1F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CLog</RootNamespace>
-    <AssemblyName>CLog</AssemblyName>
+    <RootNamespace>bildLog</RootNamespace>
+    <AssemblyName>bildLog</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
