--- a/ОтчетПоЦенам/ОтчетПоЦенам.csproj
+++ b/ОтчетПоЦенам/ОтчетПоЦенам.csproj
@@ -4,17 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{323A59F1-1592-49FF-AD00-38F9557A3133}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{FE9F94B9-6178-4D96-B115-7C4CB49E0EC8}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CParser</RootNamespace>
-    <AssemblyName>CParser</AssemblyName>
+    <RootNamespace>ОтчетПоЦенам</RootNamespace>
+    <AssemblyName>ОтчетПоЦенам</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -41,21 +46,22 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="WebDriver, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Selenium.WebDriver.4.1.0\lib\net45\WebDriver.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CCatalog.cs" />
-    <Compile Include="CChapter.cs" />
-    <Compile Include="CGood.cs" />
-    <Compile Include="CPage.cs" />
-    <Compile Include="CParser.cs" />
-    <Compile Include="CProperty.cs" />
+    <Compile Include="CExcel.cs" />
+    <Compile Include="CMatch.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Ccsv\CCsv.csproj">
+      <Project>{53cc2a76-3a25-4d3d-aac3-355eeb50a259}</Project>
+      <Name>CCsv</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CFileSystem\CFileSystem.csproj">
       <Project>{8ea8e8b3-7703-47cc-8012-d3e1523235a9}</Project>
       <Name>CFileSystem</Name>
@@ -64,22 +70,20 @@
       <Project>{a1387765-0e30-45cc-958d-0619c06ada1f}</Project>
       <Name>CLog</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CParser\CParser.csproj">
+      <Project>{323a59f1-1592-49ff-ad00-38f9557a3133}</Project>
+      <Name>CParser</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CSettings\CSettings.csproj">
       <Project>{cf83c01f-84f4-4e4b-bfe9-598af1425412}</Project>
       <Name>CSettings</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\ВыгрузкаАквамир\ВыгрузкаАквамир.csproj">
+      <Project>{5552f48a-fd3e-4238-9ccf-11d0f22675a0}</Project>
+      <Name>ВыгрузкаАквамир</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.99.0.4844.5100\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.99.0.4844.5100\build\Selenium.WebDriver.ChromeDriver.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Selenium.WebDriver.ChromeDriver.99.0.4844.5100\build\Selenium.WebDriver.ChromeDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.WebDriver.ChromeDriver.99.0.4844.5100\build\Selenium.WebDriver.ChromeDriver.targets'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
