--- a/ВыгрузкаАквамир/ВыгрузкаАквамир.csproj
+++ b/ВыгрузкаАквамир/ВыгрузкаАквамир.csproj
@@ -4,17 +4,19 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{323A59F1-1592-49FF-AD00-38F9557A3133}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{5552F48A-FD3E-4238-9CCF-11D0F22675A0}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CParser</RootNamespace>
-    <AssemblyName>CParser</AssemblyName>
+    <RootNamespace>ВыгрузкаАквамир</RootNamespace>
+    <AssemblyName>ВыгрузкаАквамир</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,6 +26,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -47,15 +50,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CCatalog.cs" />
-    <Compile Include="CChapter.cs" />
-    <Compile Include="CGood.cs" />
-    <Compile Include="CPage.cs" />
-    <Compile Include="CParser.cs" />
-    <Compile Include="CProperty.cs" />
+    <Compile Include="CCatalog_akvamir.cs" />
+    <Compile Include="CChapter_akvamir.cs" />
+    <Compile Include="CGood_akvamir.cs" />
+    <Compile Include="CPage_akvamir.cs" />
+    <Compile Include="CParcer_akvamir.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Ccsv\CCsv.csproj">
+      <Project>{53cc2a76-3a25-4d3d-aac3-355eeb50a259}</Project>
+      <Name>CCsv</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CFileSystem\CFileSystem.csproj">
       <Project>{8ea8e8b3-7703-47cc-8012-d3e1523235a9}</Project>
       <Name>CFileSystem</Name>
@@ -64,13 +75,14 @@
       <Project>{a1387765-0e30-45cc-958d-0619c06ada1f}</Project>
       <Name>CLog</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CParser\CParser.csproj">
+      <Project>{323a59f1-1592-49ff-ad00-38f9557a3133}</Project>
+      <Name>CParser</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CSettings\CSettings.csproj">
       <Project>{cf83c01f-84f4-4e4b-bfe9-598af1425412}</Project>
       <Name>CSettings</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.99.0.4844.5100\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.99.0.4844.5100\build\Selenium.WebDriver.ChromeDriver.targets')" />
